refine role detail : add permission, user

--- a/src/app/modules/tenant-api/tenant-api-detail/tenant-api-detail.component.html
+++ b/src/app/modules/tenant-api/tenant-api-detail/tenant-api-detail.component.html
@@ -7,7 +7,7 @@
     >
     <div class="setting-list-page my-4">
       <div>
-        <h3>Tenant Api</h3>
+        <h3>Tenant Permission</h3>
         <div>
           <!-- <span class="text-medium my-auto"
             >Created at: <span class="text-medium text-dark bg-light">{{ id }}</span>
@@ -18,7 +18,7 @@
         <mat-tab class="min-vh-100">
           <ng-template mat-tab-label>
             <span class="text-medium bold text-dark text-uppercase"
-              >Edit Tenant Api</span
+              >Edit Tenant Permission</span
             >
           </ng-template>
 
