--- a/src/app/shell/components/navbar/navbar-default/navbar-default.component.html
+++ b/src/app/shell/components/navbar/navbar-default/navbar-default.component.html
@@ -99,7 +99,7 @@
       class="nav-item hide-in-pc"
       *ngIf="isAuthenticated() && isSelectClient()"
     >
-      <a class="nav-link" [routerLink]="['/tenant-api', 'list']">Tenant Api</a>
+      <a class="nav-link" [routerLink]="['/tenant-api', 'list']">Permission</a>
     </li>
   </ul>
 
