--- a/src/app/shell/components/navbar/navbar-left-nav/navbar-left-nav.component.html
+++ b/src/app/shell/components/navbar/navbar-left-nav/navbar-left-nav.component.html
@@ -66,7 +66,7 @@
     class="item d-flex my-4 ml-1 cursor-pointer bold"
   >
     <span href=""><mat-icon>domain</mat-icon> </span
-    ><span class="ml-1">Tenant Api</span>
+    ><span class="ml-1">Permission</span>
   </a>
   <a
     [routerLinkActive]="'active-link'"
