--- a/src/app/modules/role/role-detail/role-detail.component.html
+++ b/src/app/modules/role/role-detail/role-detail.component.html
@@ -9,7 +9,13 @@
     </div>
     <div class="setting-list-page">
       <div class="">
-        <h3>Role</h3>
+        <div class="d-flex justify-content-between">
+          <h3>Role</h3>
+          <button class="btn btn-secondary text-medium" (click)="onSubmit()">
+            Save
+          </button>
+        </div>
+
         <div>
           <span class="text-medium my-auto"
             >Role ID:
@@ -56,7 +62,6 @@
                 formControlName="description"
               />
             </div>
-            <button class="btn btn-secondary text-medium">Save</button>
           </form>
           <div
             class="row align-items-start gap-y pt-4 mx-0 px-0 mt-4 pb-4 mb-4 "
@@ -64,7 +69,6 @@
             <div class="col-12 bold px-0 text-black mx-0 px-0">Danger Zone</div>
             <div class="col-8 col-md-10 text-danger mx-0 px-0">
               <p>Delete this Role</p>
-              <!--          <p>All your apps using this client will stop working.</p>-->
             </div>
             <div class="col-4 col-md-2 margin-auto mx-0 px-0">
               <button class="btn-danger border-10" (click)="onDelete()">
@@ -83,7 +87,11 @@
             <div class="header mb-4">
               <div class="d-flex justify-content-between">
                 <h4 class="text-title-small bold text-uppercase">Permission</h4>
-                <button type="button" class="btn btn-primary text-large">
+                <button
+                  type="button"
+                  class="btn btn-primary text-large"
+                  (click)="openDialogPermission()"
+                >
                   Add
                 </button>
               </div>
@@ -93,18 +101,38 @@
                 request.
               </h5>
             </div>
-            <table class="table">
+            <table class="table text-medium">
               <thead>
                 <tr class="text-dark">
-                  <th scope="col">Permission</th>
-                  <th scope="col">Description</th>
-                  <th scope="col">API</th>
+                  <th scope="col">Name</th>
+                  <th scope="col">Url</th>
+                  <th scope="col">Type</th>
+                  <th scope="col"></th>
                 </tr>
               </thead>
-              <tbody></tbody>
+              <tbody>
+                <tr
+                  class="text-dark"
+                  *ngFor="let item of listSelectePermission"
+                >
+                  <td>{{ item.name }}</td>
+                  <td>{{ item.url }}</td>
+                  <td>{{ item.type }}</td>
+                  <td>
+                    <!--        <dc-setting-role></dc-setting-role>-->
+                    <a
+                      [routerLink]="['../', 'detail', item.id]"
+                      class="text-primary bold"
+                      >Remove</a
+                    >
+                  </td>
+                </tr>
+              </tbody>
             </table>
           </div>
         </mat-tab>
+
+        <!-- User -->
         <mat-tab>
           <ng-template mat-tab-label>
             <span class="text-medium bold text-dark text-uppercase">User</span>
@@ -115,7 +143,11 @@
                 <h4 class="text-title-small bold text-uppercase">User</h4>
 
                 <!--            (click)="toggleForm = !toggleForm"-->
-                <button type="button" class="btn btn-primary text-large">
+                <button
+                  type="button"
+                  class="btn btn-primary text-large"
+                  (click)="openDialogUser()"
+                >
                   Add
                 </button>
               </div>
@@ -123,15 +155,30 @@
                 Users that have this role directly assigned.
               </h5>
             </div>
-            <table class="table">
+            <table class="table text-medium">
               <thead>
                 <tr class="text-dark">
-                  <th scope="col">Permission</th>
-                  <th scope="col">Description</th>
-                  <th scope="col">API</th>
+                  <th scope="col">Email</th>
+                  <th scope="col">Name</th>
+                  <th scope="col">Phone</th>
+                  <th scope="col"></th>
                 </tr>
               </thead>
-              <tbody></tbody>
+              <tbody>
+                <tr class="text-dark" *ngFor="let item of listSelectedUser">
+                  <td>{{ item.email }}</td>
+                  <td>{{ item.name }}</td>
+                  <td>{{ item.phone }}</td>
+                  <td>
+                    <!--        <dc-setting-role></dc-setting-role>-->
+                    <a
+                      [routerLink]="['../', 'detail', item.id]"
+                      class="text-primary bold"
+                      >Remove</a
+                    >
+                  </td>
+                </tr>
+              </tbody>
             </table>
           </div>
         </mat-tab>
